<resources>
    <string name="app_name">Alzheimer</string>
    <string name="image">Image</string>
    <string name="PickerPhotos">Photos</string>
    <string name="PickerVideo">Video</string>
    <string name="AllPhotos">All Photos</string>
    <string name="AllVideo">All Videos</string>
    <string name="NoPhotos">No photos yet</string>
    <string name="NoVideo">No videos yet</string>
    <string name="SearchImages" translatable="false">FIND IMAGES</string>
    <string name="SearchGifs">FIND GIFS</string>
    <string name="NoRecentPhotos">No recent photos</string>
    <string name="NoRecentGIFs">No recent GIFs</string>
    <string name="NoResult">No results</string>
    <string name="Crop">CROP</string>
    <string name="AttachPhoto">Photo</string>
    <string name="Of">%1$d of %2$d</string>
    <string name="Set">Set</string>
    <string name="Album">Album</string>
    <string name="ClearSearch">Clear search history?</string>
    <string name="ClearButton">Clear</string>
    <string name="SearchImagesTitle" translatable="false">Search web</string>
    <string name="SearchGifsTitle" translatable="false">Search GIFs</string>
    <string name="SearchImagesInfo" translatable="false">WEB SEARCH</string>
    <string name="Send">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="Preview">Preview</string>
    <string name="album_read_fail">Failed to read an album, please check permissions</string>
    <string name="relative_s_name">Relative\'s Name</string>
    <string name="title">Title</string>
    <string name="title_activity_number_game" translatable="false">NumberGameActivity</string>
    <string name="title_activity_square_match" translatable="false">SquareMatchActivity</string>
    <string name="description">Description</string>
    <string name="relatives">Relatives</string>
    <string name="puzzle">Puzzle</string>
    <string name="missing_number">Missing numbers</string>
    <string name="match">Match</string>
    <string name="medicine_reminder">Medicine reminder</string>
    <string name="relative">Relative</string>
    <string name="add_new">Add new</string>
    <string name="count">Count</string>
    <string name="next_level">Next Level</string>
    <string name="level">Level:</string>
    <string name="find_the_missing_number">Find the missing number, memorise them and hit solve! Numbers are from 1 to 12</string>
    <string name="score">Score</string>
    <string name="solve">Solve!</string>
    <string name="MostSelect">You can select up to %d pictures</string>
    <string name="doctor">Doctor</string>
    <string name="brain">Brain Training</string>
    <string name="settings">Settings</string>
    <string name="medicines">Medicines</string>
    <string name="reminders">Reminders</string>
    <string name="specialist">"Specialist"</string>
    <string name="submit">Submit</string>
    <string name="zero" translatable="false">0</string>
    <string name="not_match">Not match</string>
    <string name="are_these_2_shapes_a_match_they_might_be_rotated">Are these 2 shapes a match? they might be rotated.</string>
    <string name="to_20">Find the missing number, memorise them and hit solve! Numbers are from 1 to 20</string>
    <string name="next">Next</string>
    <string name="fill_relative_name">Please fill the Relative\'s name</string>
    <string name="pick_an_image">Pick an Image</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="job_title">Job title</string>
    <string name="education">Education level</string>
    <string name="birth_year">Birth year</string>
    <string name="child_count">Child count</string>
    <string name="this_field_can_not_be_empty">This field can not be empty</string>
    <string name="sign_up">Sign up!</string>
    <string name="duplicate">Duplicate</string>
    <string name="title_activity_word_map">Duplicate</string>
    <string name="ready">Ready</string>
    <string name="memorize_these_texts">Memorize these text and match them in the next page!</string>
    <string name="shape_categorizing">Shape Categorizing</string>
    <string name="important_events">Important events</string>
    <string name="numerical_memory">Numerical  Memory</string>
    <string name="procedural_memory">Procedural Memory</string>
    <string name="imagination_power">Imagination Power</string>
    <string name="memory_testing_1">First Stage Memory Testing</string>
    <string name="memory_testing_2">Second Stage Memory Testing</string>
    <string name="word_map">Word Map</string>
    <string name="title_activity_duplicate" translatable="false">DuplicateActivity</string>
    <string name="match_images">Hit start whenever you memorised the Images position and start matching them</string>
    <string name="image_map">Image mapping</string>
    <string name="sum_of_items">Sum of images</string>
    <string name="verify">Verify</string>
    <string name="try_again">Try Again</string>
    <string name="well_done">Well Done!</string>
    <string name="duplicate_text">Duplicate Text</string>
    <string name="party">Party</string>
    <string name="question">Question</string>
    <string name="party_question">I\'m not in the mood to translate this to english</string>
    <string name="answer">Answer</string>
    <string name="celebrity_question">I\'m not in the mood again</string>
    <string name="celebs">celebrities</string>
    <string name="utilization">Utilization</string>
    <string name="utilization_question">Not in the fucking mood man</string>
    <string name="find">Find</string>
    <string name="memory">Memory</string>
    <string name="memory_question">Fuck off</string>
    <string name="invert">Invert</string>
    <string name="invert_question">the fuck</string>
    <string name="flower_question">Fuck flowers</string>
    <string name="flower">Flower</string>
    <string name="number_map">Number Map</string>
    <string name="number_find">Find Number</string>
    <string name="count_up">Count up!</string>
    <string name="reverse_count">Reverse count</string>
    <string name="count_down">Count Down</string>
    <string name="count_up_2">Count Up with steps of 2</string>
    <string name="double_count">Double count</string>
    <string name="count_down_2">Count down with steps of 2</string>
    <string name="double_count_down">Double Down Count</string>
    <string name="result">Result</string>
    <string name="evaluate">Evaluate</string>
    <string name="even_numbers">Even Numbers</string>
    <string name="tap_evens">Tap on even numbers</string>
    <string name="wait_one_min">Wait one minute</string>
    <string name="one_minute">One Minute</string>
    <string name="fruits">Fruits</string>
    <string name="sequence">Sequence</string>
    <string name="answer_math">Answer these math questions</string>
    <string name="number_plat">Number Plate</string>
    <string name="experience">experience</string>
    <string name="restaurant">Restaurant</string>
    <string name="good_mem">Good Memory</string>
    <string name="good_deed">Good Deed</string>
    <string name="sentence">Sentence</string>
    <string name="proverb">Proverb</string>
    <string name="politician">Politician</string>
    <string name="marriage">Marriage</string>
    <string name="image_detail">Image Detail</string>
    <string name="experience_question">no fuck given</string>
    <string name="restaurant_question">---</string>
    <string name="good_mem_question">---</string>
    <string name="good_deed_question">---</string>
    <string name="sentence_question">----</string>
    <string name="flower_question_2">---</string>
    <string name="proverb_sentence">---</string>
    <string name="politician_question">---</string>
    <string name="important_events_question">---</string>
    <string name="marriage_question">---</string>
    <string name="image_detail_question">---</string>
    <string name="multi_memory_question">fuck you</string>
    <string name="multi_memory">Some good memory</string>
    <string name="poem">Sing a poem</string>
    <string name="poem_question">idc</string>
    <string name="imagine_word_question">Imagine these words IRL</string>
    <string name="face">Face</string>
    <string name="sweet">Sweet</string>
    <string name="deer">Deer</string>
    <string name="wise">Wise</string>
    <string name="horse">Horse</string>
    <string name="imagine">Imagine</string>
    <string name="make_sentence">Create a sentence with these words</string>
    <string name="bald">Bald</string>
    <string name="oskol">Idiot</string>
    <string name="fatty">Fatty</string>
    <string name="weirdo">Weirdo</string>
    <string name="short_story">Short story</string>
    <string name="memory_question_3">----</string>
    <string name="dream_question">---</string>
    <string name="super_market">Super market</string>
    <string name="super_market_question">----</string>
    <string name="chicken">Chicken</string>
    <string name="chicken_question">---</string>
    <string name="occurrence_count">Occurrence Count</string>
    <string name="count_occurrences">Count Occurrences of numbers and hit ready</string>
    <string name="more_than_one_occurrence">Which had more than one more occurrence</string>
    <string name="count_up_4">Count up with steps of four</string>
    <string name="count_up_4_title">Count Up 4</string>
    <string name="gazelle">Gazelle</string>
    <string name="drum">Drum</string>
    <string name="cherry">Cherry</string>
    <string name="red">Red</string>
    <string name="ax">Ax</string>
    <string name="radio">Radio</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="memorize_the_pattern">Memorize the Pattern and recreate it</string>
    <string name="pattern">Pattern</string>
    <string name="clock">Clock</string>
    <string name="clock_help">Memorise these clocks and hit ready</string>
</resources>
