<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.games.QuestionActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.amir.alzheimer.infrastructure.views.AlzhimerTextView
        android:id="@+id/activity_question_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="@string/memorize_these_texts"
        android:textColor="@color/white"
        android:textSize="17sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/answer"
        android:padding="7dp">

        <com.amir.alzheimer.infrastructure.views.AlzhimerInputEditField
            android:id="@+id/activity_question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/activity_question_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/diff" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.amir.alzheimer.infrastructure.views.AlzhimerButton
        android:id="@+id/activity_question_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#0D47A1"
        android:padding="7dp"
        android:text="@string/next"
        android:textColor="@color/white" />


</LinearLayout>