<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_square_match_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25sp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <com.amir.alzheimer.infrastructure.views.AlzhimerButton
            android:id="@+id/activity_square_match_match_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/green"
            android:elevation="3dp"
            android:padding="15dp"
            android:text="@string/match"
            android:textColor="@color/white" />

        <com.amir.alzheimer.infrastructure.views.AlzhimerButton
            android:id="@+id/activity_square_match_miss_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/red"
            android:elevation="3dp"
            android:padding="15dp"
            android:text="@string/not_match"
            android:textColor="@color/white" />

    </LinearLayout>


    <com.amir.alzheimer.infrastructure.views.AlzhimerTextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toStartOf="@id/container"
        android:layout_toLeftOf="@id/container"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/are_these_2_shapes_a_match_they_might_be_rotated"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <GridLayout
        android:id="@+id/activity_square_match_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_margin="15dp"
        android:background="#bbb"
        android:padding="15dp" />

    <GridLayout
        android:id="@+id/activity_square_match_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_margin="15dp"
        android:layout_toEndOf="@id/activity_square_match_first"
        android:layout_toRightOf="@id/activity_square_match_first"
        android:background="#bbb"
        android:padding="15dp" />

</RelativeLayout>